[FIX] Images use cover and no longer stretch

--- a/tpe_paw/webapp/src/main/webapp/resources/css/navigationBar.css
+++ b/tpe_paw/webapp/src/main/webapp/resources/css/navigationBar.css
@@ -105,7 +105,7 @@
 
 .sidenav img{
     border-radius: 50%;
-    object-fit: fill;
+    object-fit: cover;
     height: 20px;
     width: 20px;
     margin-right: 5px;
