--- a/tpe_paw/webapp/src/main/webapp/resources/css/snippet.css
+++ b/tpe_paw/webapp/src/main/webapp/resources/css/snippet.css
@@ -69,7 +69,7 @@ code {
 
 img {
     border-radius: 50%;
-    object-fit: fill;
+    object-fit: cover;
     height: 45px;
     width: 45px;
 }
